--- a/app/index.html
+++ b/app/index.html
@@ -762,6 +762,91 @@
             </div>
         </div>
     </section>
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__title title">
+                Why You Choose Foxtar Market Place?
+            </div>
+            <div class="advantages__inner">
+                <div class="advantages__item">
+                    <div class="advantages__item-images">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="70px" height="77px" viewBox="0 0 485.213 485.212" style="enable-background:new 0 0 485.213 485.212;"
+                        xml:space="preserve"> 
+                       <g fill="black">
+                       <path d="M363.908,166.794C363.908,74.809,309.509,0,242.606,0c-66.873,0-121.302,74.809-121.302,166.794H60.651v318.418h363.911
+                           V166.794H363.908z M136.465,227.445c-8.38,0-15.161-6.781-15.161-15.164c0-8.379,6.781-15.163,15.161-15.163
+                           c8.382,0,15.163,6.784,15.163,15.163C151.628,220.664,144.847,227.445,136.465,227.445z M242.606,30.327
+                           c50.166,0,90.979,61.216,90.979,136.468H151.628C151.628,91.542,192.44,30.327,242.606,30.327z M348.745,227.445
+                           c-8.382,0-15.159-6.781-15.159-15.164c0-8.379,6.777-15.163,15.159-15.163s15.163,6.784,15.163,15.163
+                           C363.908,220.664,357.127,227.445,348.745,227.445z"/>
+                        </g>
+                   </svg>
+                   
+                    </div>
+                    <div class="advantages__item-title">
+                        Easily Buy & Sell 
+                    </div>
+                    <div class="advantages__item-text">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+
+                <div class="advantages__item">
+                    <div class="advantages__item-images">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 466.869 466.869"  width="70px" height="77px" style="enable-background:new 0 0 466.869 466.869;" xml:space="preserve">
+     <g fill="black">             
+	<path d="M31.502,277.466H49.86v172.793c0,9.616,6.993,16.609,16.609,16.609H400.4c9.616,0,16.609-6.993,16.609-16.609V277.466
+		h18.357c9.616,0,16.609-6.702,16.609-16.609V140.223c0-9.616-6.993-17.192-16.609-17.192h-82.171
+		c38.463-20.397,57.986-39.046,60.9-60.609c1.748-13.112-2.331-32.053-30.596-49.245C353.486-4.888,328.718-1.1,312.983,5.31
+		c-25.642,10.49-48.37,36.132-67.019,76.344c-2.914,6.119-5.245,11.947-7.576,17.483c-2.331-5.536-4.662-11.364-7.576-17.483
+		C211.872,41.442,189.435,15.8,163.793,5.31C148.058-1.1,123.29-4.888,93.277,13.178C64.721,30.37,60.933,49.601,62.681,62.714
+		c2.622,21.271,22.145,39.92,60.609,60.317H31.502c-9.616,0-16.609,7.576-16.609,17.192v120.635
+		C14.893,270.765,21.887,277.466,31.502,277.466z M84.826,277.466h131.125v154.436H84.826V277.466z M382.042,431.902H250.918
+		V277.466h131.125V431.902z M417.009,242.5H400.4H250.918v-84.502h9.616l0,0l0,0h156.475V242.5z M277.725,96.223
+		c14.569-31.47,31.47-51.867,48.662-58.86c4.371-1.748,8.742-2.622,13.404-2.622c8.159,0,16.609,2.622,25.642,8.159
+		c9.033,5.536,14.569,11.364,14.278,14.861c-2.04,15.735-53.033,43.708-111.893,62.066
+		C270.441,112.832,273.646,104.673,277.725,96.223z M97.065,57.76c-0.583-3.497,4.954-9.324,14.278-14.861
+		c9.033-5.536,17.483-8.159,25.642-8.159c4.662,0,9.033,0.874,13.404,2.622c27.099,11.073,47.496,52.158,58.86,82.463
+		C150.097,101.468,99.104,73.495,97.065,57.76z M49.86,157.997h166.091V242.5H66.469H49.86V157.997z"/>
+</g>
+    </svg>
+
+                    </div>
+                    <div class="advantages__item-title">
+                        Quality Products
+                    </div>
+                    <div class="advantages__item-text">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+
+                <div class="advantages__item">
+                    <div class="advantages__item-images">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="70px" height="77px" viewBox="0 0 612 612" style="enable-background:new 0 0 612 612;" xml:space="preserve">
+
+     <g fill="black">
+			<path d="M459,18.075c-63.743,0-111.977,37.409-153,76.5c-39.091-41.482-89.256-76.5-153-76.5c-89.773,0-153,77.188-153,161.358
+				c0,45.154,18.494,77.686,38.747,108.228l237.781,285.077c26.699,28.248,31.729,28.248,58.427,0l238.316-285.077
+				C597.082,257.119,612,224.587,612,179.433C612,95.264,548.772,18.075,459,18.075z M535.5,279.744L306,553.575L76.5,278.615
+				c-27.444-38.154-38.25-63.896-38.25-99.182c0-65.752,46.952-124.944,114.75-125.499c55.769-0.459,118.977,56.495,153,99.431
+				c33.125-41.444,97.231-99.431,153-99.431c66,0,114.75,59.747,114.75,125.499C573.75,214.719,565.201,242.373,535.5,279.744z"/>
+     </g>
+</svg>
+
+                    </div>
+                    <div class="advantages__item-title">
+                        100% Secure Payment
+                    </div>
+                    <div class="advantages__item-text">                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
