added new item page

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="content">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -892,6 +894,7 @@
             </div>
         </div>
     </section>
+
     <footer class="footer">
         <div class="footer__content">
             <div class="container">
@@ -978,6 +981,9 @@
             </div>
         </div>
     </footer>
+</div>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
