--- a/app/settings.html
+++ b/app/settings.html
@@ -272,7 +272,7 @@
                     </div>
                 </div>
             </div>
-            <div class="settings">
+            <section class="settings">
                 <div class="container">
                     <div class="product-one__tabs settings__tabs">
                         <div class="tabs">
@@ -644,6 +644,7 @@
             </div>
 
 </div>
+</section>
 
 
     <footer class="footer">
