--- a/app/index.html
+++ b/app/index.html
@@ -261,6 +261,7 @@
         </div>
     </section>
     <section class="products">
+        <div class="products__wrapper">
         <div class="container-fluid">
             <div class="products__title title">
                 Let’s Check Out Our Newest Release Prodcuts 
@@ -484,8 +485,10 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
     <section class="product-slider">
+        <div class="product-slider__wrapper">
         <div class="container-fluid">
             <div class="product-slider__title title">
                 This Week Trending Products
@@ -899,6 +902,7 @@
 
             </div>
         </div>
+    </div>
     </section>
     <section class="advantages">
         <div class="container">
